<resources>
    <string name="app_name">GitHub User</string>
    <string name="legends_name">Name</string>
    <string name="legends_position">Company</string>
    <string name="legends_detail">Location</string>
    <string name="legends_overview"> Overview</string>
    <string name="content_title">
        Username
        Repository
        Follower
        Following
    </string>
    <string name="search">Search</string>
    <string name="search_hint">Masukkan Kata</string>
    <string name="content_detail">Content Detail</string>
    <string name="content_overview">Content Overview</string>
    <string name="profile">Profile</string>
    <string name="profile_name">Woro Retnoningsih</string>
    <string name="profile_email">wororaf@gmail.com</string>
</resources>